--- a/server/package.json
+++ b/server/package.json
@@ -10,9 +10,12 @@
   },
   "dependencies": {
     "@anthropic-ai/sdk": "^0.17.1",
+    "@solana/web3.js": "^1.87.6",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "joi": "^17.11.0",
+    "twitter-api-v2": "^1.15.2",
     "typescript": "^5.0.4"
   },
   "devDependencies": {
@@ -20,6 +23,7 @@
     "@types/express": "^4.17.17",
     "@types/jest": "^29.5.0",
     "@types/node": "^18.15.11",
+    "@types/joi": "^17.2.3",
     "jest": "^29.5.0",
     "ts-jest": "^29.1.0",
     "ts-node-dev": "^2.0.0"
