--- a/railway.toml
+++ b/railway.toml
@@ -1,9 +1,12 @@
 [build]
 builder = "nixpacks"
+buildCommand = "cd server && npm install && npm run build"
 
 [deploy]
-startCommand = "npm start"
-restartPolicyType = "ON_FAILURE"
+startCommand = "cd server && npm start"
+healthcheckPath = "/health"
+healthcheckTimeout = 100
+restartPolicyType = "on_failure"
 
 [nixpacks]
 node-version = "18"
