--- a/railway.toml
+++ b/railway.toml
@@ -5,4 +5,8 @@ dockerfilePath = "Dockerfile"
 [deploy]
 healthcheckPath = "/health"
 healthcheckTimeout = 100
-restartPolicyType = "on_failure" 
+restartPolicyType = "on_failure"
+
+[service]
+name = "bluff-game-backend"
+internal_port = 3001 
