--- a/server/package.json
+++ b/server/package.json
@@ -11,9 +11,11 @@
   "dependencies": {
     "@anthropic-ai/sdk": "^0.17.1",
     "@solana/web3.js": "^1.87.6",
+    "@types/ioredis": "^4.28.10",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "ioredis": "^5.4.2",
     "joi": "^17.11.0",
     "twitter-api-v2": "^1.15.2",
     "typescript": "^5.0.4"
@@ -22,8 +24,8 @@
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
     "@types/jest": "^29.5.0",
-    "@types/node": "^18.15.11",
     "@types/joi": "^17.2.3",
+    "@types/node": "^18.15.11",
     "jest": "^29.5.0",
     "ts-jest": "^29.1.0",
     "ts-node-dev": "^2.0.0"
@@ -31,4 +33,4 @@
   "engines": {
     "node": ">=18.0.0"
   }
-} 
+}
