--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "license": "ISC",
   "dependencies": {
     "@anthropic-ai/sdk": "^0.10.2",
+    "@solana/web3.js": "^1.87.6",
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
     "@types/node": "^20.10.6",
@@ -22,6 +23,8 @@
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "joi": "^17.11.0",
+    "twitter-api-v2": "^1.15.2",
     "typescript": "^5.3.3"
   },
   "devDependencies": {
