--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "ioredis": "^5.3.2",
     "joi": "^17.11.0",
     "twitter-api-v2": "^1.15.2",
     "typescript": "^5.3.3"
