--- a/package.json
+++ b/package.json
@@ -26,7 +26,9 @@
     "ioredis": "^5.3.2",
     "joi": "^17.11.0",
     "twitter-api-v2": "^1.15.2",
-    "typescript": "^5.3.3"
+    "typescript": "^5.3.3",
+    "express-rate-limit": "^7.1.5",
+    "helmet": "^7.1.0"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^6.17.0",
@@ -35,9 +37,21 @@
     "jest": "^29.7.0",
     "nodemon": "^3.0.2",
     "ts-jest": "^29.1.1",
-    "ts-node": "^10.9.2"
+    "ts-node": "^10.9.2",
+    "@types/jest": "^29.5.11",
+    "@types/express-rate-limit": "^6.0.0",
+    "@types/helmet": "^4.0.0"
   },
   "engines": {
     "node": ">=18.0.0"
+  },
+  "jest": {
+    "preset": "ts-jest",
+    "testEnvironment": "node",
+    "moduleFileExtensions": ["ts", "tsx", "js", "jsx", "json", "node"],
+    "testMatch": ["**/__tests__/**/*.test.ts"],
+    "transform": {
+      "^.+\\.tsx?$": "ts-jest"
+    }
   }
 }
