--- a/package.json
+++ b/package.json
@@ -1,14 +1,18 @@
 {
   "name": "bluff-game-server",
   "version": "1.0.0",
-  "main": "dist/server/src/server.js",
+  "main": "dist/server.js",
   "scripts": {
     "start": "node dist/server.js",
     "build": "tsc --project tsconfig.json",
     "dev": "nodemon server/src/server.ts",
     "test": "jest",
     "postinstall": "npm run build",
-    "deploy": "npm run build && npm start"
+    "deploy": "npm run build && npm start",
+    "clean": "rimraf dist",
+    "prebuild": "npm run clean",
+    "prestart": "npm run build",
+    "start:prod": "NODE_ENV=production node dist/server.js"
   },
   "keywords": ["card-game", "bluff", "ai", "server"],
   "author": "",
@@ -16,9 +20,6 @@
   "dependencies": {
     "@anthropic-ai/sdk": "^0.10.2",
     "@solana/web3.js": "^1.87.6",
-    "@types/cors": "^2.8.17",
-    "@types/express": "^4.17.21",
-    "@types/node": "^20.10.6",
     "axios": "^1.6.3",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
@@ -26,24 +27,31 @@
     "ioredis": "^5.3.2",
     "joi": "^17.11.0",
     "twitter-api-v2": "^1.15.2",
-    "typescript": "^5.3.3",
     "express-rate-limit": "^7.1.5",
     "helmet": "^7.1.0"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.17",
+    "@types/express": "^4.17.21",
+    "@types/node": "^20.10.6",
     "@typescript-eslint/eslint-plugin": "^6.17.0",
     "@typescript-eslint/parser": "^6.17.0",
     "eslint": "^8.56.0",
     "jest": "^29.7.0",
     "nodemon": "^3.0.2",
+    "rimraf": "^5.0.5",
     "ts-jest": "^29.1.1",
     "ts-node": "^10.9.2",
+    "typescript": "^5.3.3",
     "@types/jest": "^29.5.11",
     "@types/express-rate-limit": "^6.0.0",
     "@types/helmet": "^4.0.0"
   },
   "engines": {
     "node": ">=18.0.0"
+  },
+  "overrides": {
+    "inflight": "^2.0.0"
   },
   "jest": {
     "preset": "ts-jest",
