--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "main": "dist/server.js",
   "scripts": {
-    "start": "node dist/server.js",
+    "start": "node --expose-gc dist/server.js",
     "build": "tsc --project tsconfig.json",
     "dev": "nodemon server/src/server.ts",
     "test": "jest",
@@ -12,7 +12,7 @@
     "clean": "rimraf dist",
     "prebuild": "npm run clean",
     "prestart": "npm run build",
-    "start:prod": "NODE_ENV=production node dist/server.js"
+    "start:prod": "NODE_ENV=production node --expose-gc dist/server.js"
   },
   "keywords": ["card-game", "bluff", "ai", "server"],
   "author": "",
